--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "dependencies": {
     "bootstrap": "^4.5.2",
     "core-js": "^3.6.4",
+    "imask": "^6.4.2",
     "jquery": "^3.6.0",
     "popper.js": "^1.16.1",
     "terser-webpack-plugin": "^3.0.8"
