--- a/data/meta_tags.yml
+++ b/data/meta_tags.yml
@@ -1,6 +1,6 @@
 # IMPORTANT: at the bottom of your config.rb, make sure you update your domain
 og:
-  project_name: "MY NAME - Web Developer"
-  title: "MY NAME - Web Developer"
-  description: "A portfolio of my web apps."
-  # image: "og_image.png"
+  project_name: "Credit Card Theft Detector"
+  title: "Credit Card Theft Detector"
+  description: "Enter your information to see if you've been hacked"
+  image: "og_image.png"
